Create Gig, Show Page, Footers

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
 		        <span class="icon-bar"></span>
 		    </button>
 	  		<!-- Be sure to leave the brand out there if you want it shown -->
-    		<a class="navbar-brand" href="index.html">Job Portal</a>
+    		<%= link_to 'Lancer', root_path, class:'navbar-brand' %>
 		</div>
 
 		  <!-- post or upload cv -->
