--- a/app/views/gigs/search.html.erb
+++ b/app/views/gigs/search.html.erb
@@ -17,72 +17,23 @@
 			<div class="row">
 				<div class="col-xs-12 col-md-3">
 					<h3 class="sub-heading">Advance search</h3>
-					<form>
-				  		<div class="form-group">
-					    <label>Job category</label>
-					    <select class="form-control input-lg">
-						  	<option>Networking</option>
-						  	<option>Sales &amp; Marketing</option>
-						  	<option>Teaching</option>
-						  	<option>Programming</option>
-						</select>
-					    <small class="help-block">Help text for job seeker.</small>
-					    </div>
-					    <div class="form-group">
-					    <label>Location</label>
-					    <select class="form-control input-lg">
-						  	<option>America</option>
-						  	<option>Europe</option>
-						  	<option>Africa</option>
-						  	<option>Asia</option>
-						  	<option>Oceanic</option>
-						</select>
-						<small class="help-block"></small>
-						</div>
-						<div class="form-group">
-						<label>Salary</label>
-					    <select class="form-control input-lg">
-						  	<option>€1000 - €5000</option>
-						  	<option>€5000 - €10000</option>
-						  	<option>€10000+</option>
-						</select>
-						<small class="help-block"></small>
-						</div>
-						<div class="row">
-						  	<div class="col-xs-12 col-md-6">
-								<div class="checkbox">
-							      	<label>
-							        	<input type="checkbox"> Freelance
-							     	</label>
-							 	</div>
-						  	</div>
-						  	<div class="col-xs-12 col-md-6">
-								<div class="checkbox">
-							      	<label>
-							        	<input type="checkbox"> Contract
-							     	</label>
-							 	</div>
-						  	</div>
-						</div>
-					    <div class="row">
-						  	<div class="col-xs-12 col-md-6">
-								<div class="checkbox">
-							      	<label>
-							        	<input type="checkbox"> Full time
-							     	</label>
-							 	</div>
-						  	</div>
-						  	<div class="col-xs-12 col-md-6">
-								<div class="checkbox">
-							      	<label>
-							        	<input type="checkbox"> Part time
-							     	</label>
-							 	</div>
-						  	</div>
-						</div>
-						<br>
-					    <button type="submit" class="btn btn-primary input-lg btn-block">Search</button>
-					</form>
+
+					<%= form_tag search_gigs_path, method: :get do |f| %>
+							<div class='form-group'>
+								<label>Search</label>
+								<%= text_field_tag :search, nil, placeholder: "Developer, Accountant, etc.", class: 'form-control input-lg' %>
+							</div>
+							<label>Category</label>					
+								<div class='form-group'>
+								<%= select_tag :category, options_from_collection_for_select(Category.all, :id, :name), class: 'form-control input-lg' %>
+							</div>
+							<label>Location</label>	
+								<div class='form-group'>
+								<%= text_field_tag :location, nil, placeholder: "Denver, Miami, etc.", class: 'form-control input-lg' %>
+							</div>
+							<%= submit_tag "Search", class: 'btn btn-primary input-lg btn-block' %>
+					
+					<% end %>
 				</div>
 				<div class="col-xs-12 col-md-9">
 					<h3 class="sub-heading">
