--- a/app/views/gigs/show.html.erb
+++ b/app/views/gigs/show.html.erb
@@ -52,6 +52,44 @@
 						<% end %>
 					</div>
 				</div>
+
+				<div class="col-xs-12 col-md-8">
+					<h3 class="sub-heading">Proposals</h3>
+						<% if @proposals.present? %>
+							<% @proposals.each do |proposal| %>
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<div class="row">
+											<div class="col-md-4">
+												<h3 class="panel-title"><%= proposal.user %></h3>
+											</div>
+											<div class="col-md-4">
+												<h3 class="panel-title">
+												Bid: <%= number_to_currency(proposal.bid, precision: 2) %>
+												</h3>
+											</div>
+											<div class="col-md-4">
+												<h3 class="panel-title">
+												Posted: <%= proposal.created_at.strftime('%B %d, %Y') %>
+												</h3>
+											</div>
+										</div>
+									</div>
+									<div class="panel-body">
+										<%= proposal.description %>
+									</div>
+									<div class="panel-footer">
+										<%= form_for @gig, method: :put do |f| %>
+											<%= f.submit "Award Proposal" %>
+										<% end %>
+									</div>
+								</div>
+							<% end %>
+						<% else %>
+						<% end %>
+
+				</div>
+
 			</div>
 		</section>
 	</div>	
