--- a/app/views/gigs/index.html.erb
+++ b/app/views/gigs/index.html.erb
@@ -3,7 +3,7 @@
 	<section id="search-container">
 		<div class="container">
 			<div id="search-box">
-				<h1>We currently have <strong>25,011</strong> job posts but only <strong>10,111</strong> applicants</h1>
+				<h1>We currently have <strong><%= @julie.total_count %></strong> gigs but only <strong><%= @users.count %></strong> contractors</h1>
 				<%= form_tag search_gigs_path, method: :get do |f| %>
 					<%= text_field_tag :search, nil, placeholder: "Example: Software Developer", class: "col-md-9" %>
 					<%= submit_tag "Search", class: "col-md-3 btn btn-primary" %>
@@ -44,10 +44,13 @@
 					  <tbody>
 					  	<% @julie.each do |mike| %>
 					  		<tr>
-					  			<td>
-					  				<p><%= link_to mike.name, mike %></a> <small class="label label-success">Full time</small></p>
-					  				<p>Google Enterprises</p>
-					  			</td>
+					  			<td class='col-md-6'>
+					  				<p><%= link_to mike.name, mike %></a> <small class="label label-success"><%= number_to_currency(mike.budget, precision:2) %></small></p>
+					  				<p><%= h truncate(mike.description, length: 500) %></p>
+					  				<p>Skills: <%= mike.skills.map {|s| s.name}.join(", ") %></p>
+       				  			</td>
+       				  			<td><%= mike.category.name %>
+       				  			</td>
 					  			<td class="job-location">
 					  				<p><i class="glyphicon glyphicon-calendar"></i><%= mike.created_at.strftime('%B %d, %Y') %></p>
 					  				<p><i class="glyphicon glyphicon-map-marker"></i><%= mike.location %></p>
