--- a/app/views/gigs/show.html.erb
+++ b/app/views/gigs/show.html.erb
@@ -29,6 +29,8 @@
 				<div class="col-xs-12 col-md-4">
 					<div class="content-inner-detail">
 						<legend>Submit a Proposal</legend>
+
+						<% if user_signed_in? && @gig.user != current_user %>
 						<%= form_for :proposal, url: gig_proposals_path(@gig) do |f| %>
 							<div class="row">
 								<div class="col-xs-12 col-md-12">
@@ -46,9 +48,16 @@
 									</div>
 								</div>
 							</div>
-
 							<br />
 							<%= f.submit "Submit Proposal", class: 'btn btn-primary input-lg' %>
+						<% end %>
+						<% elsif @gig.user == current_user && @gig.open == true %>
+							<h3 class='text-center'>You can't bid on your own gig!</h3>
+						<% elsif @gig.open == false %>
+							<h3 class='text-center'>This gig is closed!</h3>
+						<% else %>
+							<h3 class='text-center'>Sign in to make a bid!</h3>
+							<%= link_to 'Sign in', new_user_session_path, class: 'btn btn-primary form-control' %>
 						<% end %>
 					</div>
 				</div>
@@ -107,6 +116,7 @@
 									<div class="panel-body">
 										<%= proposal.description %>
 									</div>
+									<% if current_user == @gig.user && @gig.awarded_proposal.blank? %>
 									<div class="panel-footer">
 										<%= form_for @gig, method: :put do |f| %>
 											<%= f.hidden_field :awarded_proposal, value: proposal.id %>
@@ -114,6 +124,7 @@
 											<%= f.submit "Award Proposal" %>
 										<% end %>
 									</div>
+									<% end %>
 								</div>
 							<% end %>
 						<% else %>
