--- a/app/views/layouts/_gig_listings.html.erb
+++ b/app/views/layouts/_gig_listings.html.erb
@@ -24,7 +24,18 @@
 				<div class="col-xs-12 col-md-9">
 					<h3 class="sub-heading">
 						Gigs
-						<span class="pull-right"><small>1 - 25 results</small></span>
+						<span class="pull-right">
+						   <div class='dropdown'>
+						   		<button class='btn btn-default dropdown-toggle' type='button' id='dropdownMenu1' data-toggle='dropdown'>
+						   		Sort By
+						   		<span class='caret'></span>
+						   		</button>
+						   		<ul class='dropdown-menu'>
+						   			<li><%= link_to 'Oldest', gigs_path(sort_by: 'oldest') %></li>
+						   			<li><%= link_to 'Newest', gigs_path(sort_by: 'newest') %></li>
+						   			<li><%= link_to 'Name', gigs_path(sort_by: 'name') %></li>
+						   	</div>
+						</span>
 					</h3>
 					<table class="table table-striped">
 					  <tbody>
